--- a/src/app.html
+++ b/src/app.html
@@ -18,9 +18,10 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="/smui.css" />
 		<link rel="stylesheet" href="node_modules/svelte-material-ui/bare.css" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link rel="stylesheet" href="./global.css"/>
+		<!-- <link rel="stylesheet" href="../src/global.css"; -->
 		<link
 				href="https://fonts.googleapis.com/css2?family=Material+Icons&Roboto+Mono:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 				rel="stylesheet"
